--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </div>
     <form action="" id='sendMessage' style="display:none;" >   
         <input type="text" id='m'>
-        <button type="submit">send</button>
+        <button type="button">send</button>
     </form>
 </body>
 </html>
